# dependancy_llm

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt  run_train.sh  test_instanse.sh
src/dependency_llm/: config.yaml  dependencyMatrixModel.py  dependency_data.py  main.py  train.py  trainer.py  util.py
src/dependency_llm/config/: setting.yaml
src/dependency_llm/data/: analyze_ktc.py  euc2utf.py
src/dependency_llm/dataset/: dependency_data.py  dependency_data_v2.py  splitDataset.py
src/dependency_llm/model/: baseModel.py  dependencyMatrixModel.py  dependencyMatrixModel_v2.py
src/test/: instanse.py  test_dataset.py
