[project]
name = "dependancy-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mizuki", email = "mbaba@kanolab.net" }
]
dependencies = [
    "tqdm>=4.66.1",
    "wandb>=0.16.0",
    "pyyaml>=6.0.1",
    "fugashi>=1.3.0",
    "ipadic>=1.0.0",
    "pytest>=7.4.3",
    "torch==1.13.1",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "matplotlib>=3.7.4",
    "transformers>=4.37.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dependancy_llm"]

